--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -40,7 +40,7 @@
     "@types/node-fetch": "^2.6.2",
     "@types/pg": "^8.6.5",
     "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.8",
     "fs-extra": "^11.1.1",
